--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		 <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId><!--$NO-MVN-MAN-VER$-->
+        <version>1.1.0.Final</version>
+    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
