--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -9,13 +8,13 @@
 		<version>2.7.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.jenkins.natixis</groupId>
-	<artifactId>natixis-first-jenkins</artifactId>
+	<groupId>com.example</groupId>
+	<artifactId>demo-3</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>natixis-first-jenkins</name>
+	<name>demo-3</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
     		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
@@ -25,13 +24,6 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		
-		 <dependency>
-        <groupId>javax.validation</groupId>
-        <artifactId>validation-api</artifactId><!--$NO-MVN-MAN-VER$-->
-        <version>1.1.0.Final</version>
-    </dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -41,17 +33,10 @@
 
 	<build>
 		<plugins>
-			
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
-			<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-dependency-plugin</artifactId>
-    <version>3.3.0</version>
-</plugin>
 		</plugins>
 	</build>
 
