--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
 		<version>2.7.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo-3</artifactId>
+	<groupId>com.jenkins.natixis</groupId>
+	<artifactId>natixis-first-jenkins</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo-3</name>
+	<name>natixis-first-jenkins</name>
 	<description>Demo project for Spring Boot</description>
+
 	<properties>
 		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
